dataset1235/2025-2/1153765216/users/2357208246/executions/2814675586_2296111720.log
== RUN (2025-08-26 18:22:25)
-- CODE: 
base = float(input()
altura = float((input())
area = base * altura
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                 ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                 ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                 ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                 ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                 ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
File "XXXX", line 1
    base = float(input()
                 ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:22:12)
-- CODE: 
base = float(input()
altura = float((input())
area = base * altura
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                 ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                 ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                 ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                 ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                 ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
File "XXXX", line 1
    base = float(input()
                 ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:22:14)
-- CODE: 
base = float(input()
altura = float((input())
area = base * altura
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                 ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                 ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                 ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                 ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                 ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
File "XXXX", line 1
    base = float(input()
                 ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-26 18:22:51)
-- CODE: 
base = float(input())
altura = float(input())
area = base * altura
print(area)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
---- user output:
36.0
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
---- user output:
6000.0
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
---- user output:
360.0
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
---- user output:
6.0
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
---- user output:
1000.0
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
---- user output:
83.2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:22:38)
-- CODE: 
base = float(input())
altura = float((input())
area = base * altura
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
File "XXXX", line 2
    altura = float((input())
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
File "XXXX", line 2
    altura = float((input())
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
File "XXXX", line 2
    altura = float((input())
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
File "XXXX", line 2
    altura = float((input())
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
File "XXXX", line 2
    altura = float((input())
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
File "XXXX", line 2
    altura = float((input())
                  ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:22:21)
-- CODE: 
base = float(input()
altura = float((input())
area = base * altura
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                 ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                 ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                 ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                 ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                 ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
File "XXXX", line 1
    base = float(input()
                 ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:22:30)
-- CODE: 
base = float(input())
altura = float((input())
area = base * altura
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
File "XXXX", line 2
    altura = float((input())
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
File "XXXX", line 2
    altura = float((input())
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
File "XXXX", line 2
    altura = float((input())
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
File "XXXX", line 2
    altura = float((input())
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
File "XXXX", line 2
    altura = float((input())
                  ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
File "XXXX", line 2
    altura = float((input())
                  ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:22:06)
-- CODE: 
base = float(input()
altura = float((input())
area = base * altura
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                 ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                 ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                 ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                 ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                 ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
File "XXXX", line 1
    base = float(input()
                 ^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:22:47)
-- CODE: 
base = float(input())
altura = float(input())
area = base * altura
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
---- user output:
36.0
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
---- user output:
6000.0
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
---- user output:
360.0
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
---- user output:
6.0
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
---- user output:
1000.0
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
---- user output:
83.2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-26 18:21:54)
-- CODE: 
base = float(input()
altura = float(input())
area = base * altura
print(area)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.5
8.0
---- correct output:
36.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 2:
---- input:
50.0
120.0
---- correct output:
6000.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 3:
---- input:
12.0
30.0
---- correct output:
360.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 4:
---- input:
2.0
3.0
---- correct output:
6.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 5:
---- input:
25.0
40.0
---- correct output:
1000.0
-- ERROR:
File "XXXX", line 1
    base = float(input()
                ^
SyntaxError: '(' was never closed
-- TEST CASE 6:
---- input:
6.5
12.8
---- correct output:
83.2
-- ERROR:
File "XXXX", line 1
    base = float(input()
                ^
SyntaxError: '(' was never closed
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
